--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "PolyRoots 1.2.1 February 21",
+  "name": "PolyRoots 1.2.1 Mar1 - Call for Price",
   "version": "2.6.4",
   "meta": {
     "price": 0,
